unpackaged/main/default/objects/Account_Addresses__c/Account_Addresses__c.object-meta.xml
<CustomObject>
    <label>Account Addresses</label>
    <nameField>
        <displayFormat>AA-{0000}</displayFormat>
        <label>Account Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>