unpackaged/main/default/objects/Account_Addresses__c/fields/Address_Label__c.field-meta.xml
<CustomField>
    <fullName>Address_Label__c</fullName>
    <label>Address Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>